--- a/app/src/main/res/layout/fragment_title_details.xml
+++ b/app/src/main/res/layout/fragment_title_details.xml
@@ -23,7 +23,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fitsSystemWindows="true"
-                android:scaleType="centerInside"
+                android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax" />
 
             <com.google.android.material.appbar.MaterialToolbar
