--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,13 +2,14 @@
     <!-- Base application theme. -->
     <style name="Theme.MovieSearch" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorPrimary">@color/darkPrimaryColor</item>
+        <item name="colorPrimaryVariant">@color/darkPrimaryDarkColor</item>
+        <item name="colorOnPrimary">@color/darkSecondaryColor</item>
+
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondary">@color/darkSecondaryColor</item>
+        <item name="colorSecondaryVariant">@color/darkSecondaryDarkColor</item>
+        <item name="colorOnSecondary">@color/darkSecondaryColor</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
 
@@ -16,6 +17,7 @@
 
         <!-- Text -->
         <item name="android:textColor">@android:color/darker_gray</item>
+        <item name="itemIconTint">@color/darkSecondaryColor</item>
 
     </style>
 </resources>
