--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,20 @@
-<?xml version="1.0" encoding="utf-8"?>
+<!--?xml version="1.0" encoding="UTF-8"?-->
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+  <color name="primaryColor">#29b6f6</color>
+  <color name="primaryLightColor">#73e8ff</color>
+  <color name="primaryDarkColor">#0086c3</color>
+  <color name="secondaryColor">#f44336</color>
+  <color name="secondaryLightColor">#ff7961</color>
+  <color name="secondaryDarkColor">#ba000d</color>
+  <color name="primaryTextColor">#000000</color>
+  <color name="secondaryTextColor">#000000</color>
+
+  <color name="darkPrimaryColor">#212121</color>
+  <color name="darkPrimaryLightColor">#484848</color>
+  <color name="darkPrimaryDarkColor">#000000</color>
+  <color name="darkSecondaryColor">#e53935</color>
+  <color name="darkSecondaryLightColor">#ff6f60</color>
+  <color name="darkSecondaryDarkColor">#ab000d</color>
+  <color name="darkPrimaryTextColor">#ffffff</color>
+  <color name="darkSecondaryTextColor">#fafafa</color>
 </resources>
